--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,7 @@
   --accent: hsl(60, 4.8%, 95.9%);
   --accent-foreground: hsl(24, 9.8%, 10%);
   --destructive: hsl(0, 84.2%, 60.2%);
+  --destructive-hover: hsl(0, 52%, 34%);
   --destructive-foreground: hsl(60, 9.1%, 97.8%);
   --ring: hsl(20, 14.3%, 4.1%);
   --radius: 0.5rem;
